<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip">

        <EditText
            android:id="@+id/phone_no"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginTop="50dip"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/light_gray" />

        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginTop="20dip"
            android:hint="@string/password"
            android:imeOptions="actionSend"
            android:inputType="textPassword|textNoSuggestions"
            android:textColorHint="@color/light_gray" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginTop="50dip"
            android:background="@drawable/big_button_background"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip">

            <TextView
                android:id="@+id/forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/forget_password"
                android:textColor="@color/green_88"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/register"
                android:textColor="@color/green_88"
                android:textSize="@dimen/text_normal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/app_declare"
                android:textColor="@color/green_88" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/disclaimer"
                android:gravity="center"
                android:text="@string/click_login_agree"
                android:textColor="@color/green_88" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>