<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/activity_container"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="0dip"></LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/gray_CC" />

    <LinearLayout
        android:id="@+id/main_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:background="@color/theme_color"
        android:orientation="horizontal"
        android:padding="0dip">


        <RelativeLayout
            android:id="@+id/homepage_tab"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.nl.myapplication.view.TabTextView
                android:id="@+id/homepage_button"
                style="@style/TabTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="11dip"
                android:text="@string/homepage" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/order_tab"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.nl.myapplication.view.TabTextView
                android:id="@+id/order_button"
                style="@style/TabTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="11dip"
                android:text="@string/order" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_tab"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.nl.myapplication.view.TabTextView
                android:id="@+id/mine_button"
                style="@style/TabTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="11dip"
                android:text="@string/mine" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/more_tab"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.nl.myapplication.view.TabTextView
                android:id="@+id/more_button"
                style="@style/TabTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="11dip"
                android:text="@string/more" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>